WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63425
[GTK] Fix build break to support webgl
https://bugs.webkit.org/show_bug.cgi?id=63425
Summary
[GTK] Fix build break to support webgl
ChangSeok Oh
Reported
2011-06-26 23:38:51 PDT
Fix build break when webGL is enabled Updated ANGLE & wrong variable name might be the causes.
Attachments
patch to fix build-break
(3.94 KB, patch)
2011-06-27 00:36 PDT
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2011-06-27 00:36:45 PDT
Created
attachment 98675
[details]
patch to fix build-break
WebKit Review Bot
Comment 2
2011-06-27 10:03:03 PDT
The commit-queue encountered the following flaky tests while processing
attachment 98675
[details]
: fast/filesystem/filesystem-uri-origin.html
bug 63206
(author:
adamk@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 3
2011-06-27 10:04:42 PDT
Comment on
attachment 98675
[details]
patch to fix build-break Clearing flags on attachment: 98675 Committed
r89828
: <
http://trac.webkit.org/changeset/89828
>
WebKit Review Bot
Comment 4
2011-06-27 10:04:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug