2011-06-27  ChangSeok Oh  <shivamidow@gmail.com>

Reviewed by Martin Robinson.

        [GTK] Fix build break to support webgl
        https://bugs.webkit.org/show_bug.cgi?id=63425

        Some missing files in ANGLE are just added to fix build-break.

        No test reqired

        * GNUmakefile.list.am:
2011-06-27  ChangSeok Oh  <shivamidow@gmail.com>

        Reviewed by Martin Robinson.

        [GTK] Fix build break to support webgl
        https://bugs.webkit.org/show_bug.cgi?id=63425

        A member variable enableWebGL in WebKitWebSettingsPrivate is changed to enableWebgl

        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):

Canonical link: https://commits.webkit.org/79123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89828 268f45cc-cd09-0410-ab3c-d52691b4dbfc